# gptHaRav

./: README.md  pyproject.toml
gptharav/: scraper.py
gptharav/docs/: chap25.html
